<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@android:color/transparent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_user_welcome_to_snake_game"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="24dp"/>
    </com.google.android.material.card.MaterialCardView>

    <!-- Username Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@android:color/transparent">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_username"
            android:textSize="18sp"
            android:textStyle="italic"
            android:padding="16dp"/>
    </com.google.android.material.card.MaterialCardView>

    <!-- Buttons Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlaySnakeGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/green"
                android:text="@string/btn_play_snake_game"
                app:cornerRadius="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUserScores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/teal"
                android:text="@string/btn_my_scores"
                app:cornerRadius="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOnlineLeaderBoard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/gold"
                android:text="@string/btn_leader_board"
                app:cornerRadius="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/red"
                android:text="@string/btn_logout"
                app:cornerRadius="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>